Update index.html fabicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Go Page.com</title>
-    <link rel="shortcut" href="img/icn.bmp">
+    <link rel="fabicon" href="img/icn.bmp">
     <style>
         h1.titulo {
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
